--- a/index.html
+++ b/index.html
@@ -24,16 +24,46 @@
 		<link rel="stylesheet" href="css/footer.css"> 
 		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     </head>
-   <script>
- function disableClick(){
- document.onclick=function(event){
- if (event.button == 2) {
- alert('Right Click Message');
- return false;
- }
- }
- }
- </script>
+   <script type="text/javascript">
+    function mousehandler(e) {
+        var myevent = (isNS) ? e : event;
+        var eventbutton = (isNS) ? myevent.which : myevent.button;
+        if ((eventbutton == 2) || (eventbutton == 3)) return false;
+    }
+    document.oncontextmenu = mischandler;
+    document.onmousedown = mousehandler;
+    document.onmouseup = mousehandler;
+    function disableCtrlKeyCombination(e) {
+        var forbiddenKeys = new Array("a", "s", "c", "x","u");
+        var key;
+        var isCtrl;
+        if (window.event) {
+            key = window.event.keyCode;
+            //IE
+            if (window.event.ctrlKey)
+                isCtrl = true;
+            else
+                isCtrl = false;
+        }
+        else {
+            key = e.which;
+            //firefox
+            if (e.ctrlKey)
+                isCtrl = true;
+            else
+                isCtrl = false;
+        }
+        if (isCtrl) {
+            for (i = 0; i < forbiddenKeys.length; i++) {
+                //case-insensitive comparation
+                if (forbiddenKeys[i].toLowerCase() == String.fromCharCode(key).toLowerCase()) {
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
+</script>
     <style>
 			img{
 			image-rendering: -moz-crisp-edges !important;       
@@ -43,7 +73,7 @@
 			-ms-interpolation-mode: nearest-neighbor !important;
 		}
     </style>
-    <body onLoad="disableClick()">
+   <body oncontextmenu="return false">
 		<header class="header" id="header">
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
